Sistem Keuangan Daarul Jannah/static/CSS/base.css
html, body {
    height: 100%;
    font-family: "Poppins", sans-serif !important;
    /* font-size: calc(0.75em + 0.5vmin); */
    background-color: #FAFAFA;
    margin:0px;
}
.parent {
    display: grid;
    grid-template-columns: 0.75fr repeat(4, 1fr);
    grid-template-rows: 0.35fr repeat(3, 1fr) 0.2fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    height: 100vh;
}

.side { 
    grid-area: 1 / 1 / 6 / 2; 
    /* height: 100vh; */
    background-color:#056A31;
}
.top {
    grid-area: 1 / 2 / 2 / 6; 
    border-bottom: 1px solid #CCCCCC;
    padding: 0.5%;
    color:black !important;
 }
.middle { 
    grid-area: 2 / 2 / 5 / 6; 
    padding: 20px;
    grid-auto-rows: 500px;
    overflow: auto;
}
.footer { 
    grid-area: 5 / 2 / 6 / 6;  
    text-align: center;
    padding: 1%;
    color: #ccc;
    margin: 0;
}

.sidebar{
    text-align: center;
    padding: 10px;
    padding-top: 30px;
    color: white;
}
.sidebar h1,h2,h3,h4,h5,h6,p{
    margin-bottom: 0;
    padding-bottom: 0;
    margin-top: 0;
}

.sidebar p{
    font-size: 14px;
    font-weight: lighter;
}

.side-logo{
    width: 100px;
    height: 100px;
}
.user{
    font-size: 100px; 
}

.menu{
    display: flex;
    flex-direction: column;
    margin-top: 20px;
}

.menu i{
    font-size: 20px;
    padding-top: 10px;
    /* color: white; */
}

.btn-wrap{
    text-align: center;
}

ul, li, a{
    list-style-type: none;
    text-decoration: none;
    color: white;
    font-size: 18px;
    margin: 0;
    padding: 0;
}

nav{
    text-align:justify;
}

nav a{
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 10px;
}

.li-menu:hover, .li-menu:active{
    color: black;
    background-color: white;
}

nav a h5{
    padding-top: 4%;
    font-weight: normal;
    width: 50%;
}

.header {
    margin-left: 20px;
    
}

.profil{
    margin-left: 20px;
    display: flex;
    justify-content: flex-end;
}

.foto-profil{
    width:50px; 
    height:50px;
    border-radius:100px;
}

.konten-profil:hover{
    cursor:pointer;
}

.teks-profil h5, h6{
    margin-bottom: 0px;
    margin-top: 1px;
    margin-right: 10px;
}

.teks-profil h5{
    font-weight: bolder;
    font-size: medium;
    margin-bottom: 2px;
}

.dropbtn {
    background-color: #FAFAFA;
    border: none;
    cursor: pointer;
}

.dropdown {
    position: relative;
    display: inline-block;
}
  
.dropdown-content {
    display: none;
    position: absolute;
    right: 0;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    padding-bottom: 10px;
    text-decoration: none;
    display: block;
    font-size: 14px;
}
  
.dropdown:hover .dropdown-content {
    display: block;
}
  
.disabled {
    pointer-events:none;     
}

.logout-btn{
    background-color: #A60000;
    padding: 5px;
    border-radius: 5px;
    color: white!important; 
    text-align: center;
}

.logout-btn:hover{
    background-color: #820000  !important;
}

.page-title{
    font-weight: bolder;
    font-size: 1.75vw;
    margin: 0;
}

.sub-title{
    font-size: 1vw;
}

.filter{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 2%;
    margin-bottom:2%;
}


.filter-kanan{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.filter-kiri select{
    margin: 0;
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #CCCCCC;
    font-weight: bolder;
    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
}

.p-btn{
    background-color: #056A31;
    padding: 10px;
    font-size: 0.9vw;
    border-radius: 5px;
    margin-right: 10px;
    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
}

.btn:hover{
    opacity: 0.8;
}

.search-bar{
    background-color: white;
    border: 1px solid #CCCCCC;
    padding: 2px;
    border-radius: 5px;
    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
}

.search-bar select, .search-bar input, .dtl-style select, .dtl-style input{
    height: 100%;
    border: none;
    font-weight: bolder;
    padding: 0;
    padding-left: 10px;
    background-color: transparent;
    
}

.dtl-style select, .dtl-style input{
    width: 100%;
}

.search-bar select{
    border-right: 1px solid #ccc;
}

select:focus, input:focus{
    outline: none;
}

table{
    width: 100%;
    border: 1px solid #CCCCCC;
    border-radius: 1em;
    padding: 10px;
}

.shadow{
    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    font-size: 0.9vw;
}

th,td{
    text-align: center;
    color: black !important;
    padding: 5px;
}

.table a{
    color: black;
    font-size: 0.9vw;
}

.table tr:hover{
    border-radius: 5px;
    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
    -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
    -moz-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
}

.table th {
    pointer-events: none;
}

.column{
    display: flex;
    flex-direction: column;
}

.row{
    display: flex;
    flex-direction: row;
}

.ft-siswa{
    width: 150px;
    height: 200px;
    border-radius: 15px;
}

.card{
    padding: 2.5%;
    border: 1px solid #CCCCCC;
    border-radius: 15px;
    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
}

.card-nosh{
    border: 1px solid #CCCCCC;
    border-radius: 15px;
    padding: 2%;
    /* margin:10px; */
    min-height: 85%;
}

.container{
    margin-top: 2%;
    margin-bottom:2%;
}

.fl-stretch{
    align-items: stretch; 
    width:100%
}

.fl-stretch > div{
    flex: 1;
}

.detail{
    margin: 5px;
    width: 100%;
}

.detail h4{
    padding: 5px;
    
}

.detail .in-1{
    min-width: 30%;
}

.detail .in-2{
    min-width: 14.75%;
}

.detail p{
    padding: 5px;
    min-width: fit-content;
}

.dtl-style{
    border: 1px solid #CCCCCC;
    width: 100%;
    border-radius: 10px;
    /* padding: 5px; */
}

.ch-btn{
    background-color: #056A31;
    padding: 10px;
    font-size: 0.8vw;
    border-radius: 10px;
}

.del-btn{
    background-color: #820000;
    font-size: 0.8vw;
    padding: 10px;
    border-radius: 10px;
    margin-left:10px;
}

.cmd-btn{
    margin-top: 3%;
    /* margin-bottom: 3%; */
    padding: 0;
}

